[package]
name = "desktop"
version = "0.1.0"
authors = ["Alexandre DUVAL <alexanduval@wanadoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
tokio = "0.1"
log = "0.4"
env_logger = "0.7"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
circular = "0.3"
clap = "2.0"
nix = "0.15"
rust-s3 = "0.18.10"
rusoto_s3 = "0.42.0"
rusoto_core = "0.42.0"
rusoto_credential = "0.42.0"
json = "0.12.1"
chrono = "0.4"
